--- a/index/style.css
+++ b/index/style.css
@@ -9,20 +9,21 @@
 .form-control{
     font-size: smaller;
 }
-
-.card {
+  /* all */
+  .social-icon{
+    cursor: pointer;
+  }
+  .card {
     border: 1px solid #ccc;
     border-radius: 8px;
     padding: 15px;
     width: 300px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
     margin: 15px auto;
-    transition: transform 0.3s;
+    
   }
-  .card:hover{
-    transform: scale(1.1); /* ingrandimento del 10% al passaggio del mouse sulla card */
-  }
-
+  
+  /* backoffice css */
   .edit,
   .delete{
     background-color: #212529;
@@ -42,4 +43,19 @@
   .delete:hover{
     transform: scale(1.1);
     background-color: #CC0000;
+  }
+
+  @media (min-width: 768px) {
+    .card {
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 15px;
+      width: 300px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+      margin: 15px auto;
+      transition: transform 0.3s;
+    }
+    .card:hover{
+      transform: scale(1.1); /* ingrandimento del 10% al passaggio del mouse sulla card */
+    }
   }
