--- a/index/style.css
+++ b/index/style.css
@@ -21,10 +21,7 @@
     border-radius: 8px;
     cursor: pointer;
   }
-  /* product */
-  #single-card{
-    width: 100%;
-  }
+
 
   /* all */
   .navbar-brand .super-mega-banana{
@@ -50,7 +47,8 @@
   }
   .card-img-top{
     width: 100%;
-    height: auto;
+    height: 250px;
+    object-fit: contain;
   }
   
   /* backoffice css */
