--- a/index/style.css
+++ b/index/style.css
@@ -76,6 +76,11 @@
     background-color: #CC0000;
   }
 
+  /* product css */
+  #product-details{
+    width: 80vw;
+  }
+
   @media (min-width: 768px) {
     .card {
       border: 1px solid #ccc;
