--- a/index/style.css
+++ b/index/style.css
@@ -106,10 +106,7 @@ certificate */
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
-
-table{
-  width: 60%;
+  margin: 0 20rem 0 20rem;
 }
 
 th, td{
